--- a/styles/main.css
+++ b/styles/main.css
@@ -4506,6 +4506,7 @@ Created using IcoMoon - icomoon.io
 
 .card .card-body {
   min-height: 190px;
+  padding-left: 0;
 }
 
 .card[data-background-color="orange"] {
